k8s/production/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: CHANGEMEpi
  namespace: changeme 
spec:
  ports:
  - name: default
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: CHANGEMEpi
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
