k8s/production/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: CHANGEMEpi
  namespace: changeme 
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/proxy-body-size: "500m"
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "20s"
    nginx.org/client-max-body-size: "500m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "36000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "36000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "36000"
    # necessary for uploading XML files greater than 1 megabyte in size
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
spec:
  rules:
  - host: CHANGEME.CHANGEME.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: CHANGEME-automation
           port: 
             number: 8000
